// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SettingsFieldset /> renders fieldset with plain text description 1`] = `
<DocumentFragment>
  <fieldset
    class="mx_SettingsFieldset"
    data-testid="test"
  >
    <legend
      class="mx_SettingsFieldset_legend"
    >
      Who can read history?
    </legend>
    <div
      class="mx_SettingsFieldset_description"
    >
      <div
        class="mx_SettingsSubsection_text"
      >
        Changes to who can read history.
      </div>
    </div>
    <div
      class="mx_SettingsFieldset_content"
    >
      <div>
        test
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`<SettingsFieldset /> renders fieldset with react description 1`] = `
<DocumentFragment>
  <fieldset
    class="mx_SettingsFieldset"
    data-testid="test"
  >
    <legend
      class="mx_SettingsFieldset_legend"
    >
      Who can read history?
    </legend>
    <div
      class="mx_SettingsFieldset_description"
    >
      <div
        class="mx_SettingsSubsection_text"
      >
        <p>
          Test
        </p>
        <a
          href="#test"
        >
          a link
        </a>
      </div>
    </div>
    <div
      class="mx_SettingsFieldset_content"
    >
      <div>
        test
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`<SettingsFieldset /> renders fieldset without description 1`] = `
<DocumentFragment>
  <fieldset
    class="mx_SettingsFieldset"
    data-testid="test"
  >
    <legend
      class="mx_SettingsFieldset_legend"
    >
      Who can read history?
    </legend>
    <div
      class="mx_SettingsFieldset_content"
    >
      <div>
        test
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;
